# rubydex

./: .clangd  .document  .gitignore  .rdoc_options  .rubocop.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE.txt  NOTES.txt  README.md  Rakefile  autoresearch.md  autoresearch.sh  bench.rb  build.rs  cbindgen.toml  dev.yml  extconf.rb  incremental-resolution-approaches.md  index.gemspec  index_directory.rb  rb_test.rb  rubydex.gemspec  saturn.gemspec  test.rb  test_dump.rb  test_quick.rb
.claude/: settings.local.json
.claude/agents/: ruby-vm-expert.md  rust-systems-reviewer.md  type-checker-architect.md
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: ci.yml  cibuildgem.yaml  cross-gem.yml  dependabot_automerge.yml  easy-compile.yaml  indexing_top_gems.yml  memleak.yml  pages.yml  security-code-scanner.yml
benchmark/: batched_callbacks_benchmark.rb  boundary_overhead.rb  function_calls.rb  integer_objects.rb  string_objects.rb
benchmark/results/: batched_callbacks.md
docs/: architecture.md  extraction.md  rdoc-extension-root.c  resolution.md  ruby-behaviors.md  team-review-summary.md
docs/junior-notes/: alex.md  sam.md
docs/plans/: 2026-01-14-indexer-plugins-meta.md  2026-01-14-indexer-plugins-stage1.md  (+2 more)
exe/: index  rdx  rubydex_mcp  sat
lib/: index.rb  rubydex.rb  saturn.rb
proto/: comments.proto
rakelib/: cargo.rake  index_top_gems.rake  top_gems.yml
rbi/: rubydex.rbi
rust/: Cargo.toml  about.hbs  about.toml  skills.json
rust/about_templates/: about.hbs  mingw_licenses.hbs
rust/index/: Cargo.toml  graph.db
rust/index-sys/: Cargo.toml  build.rs
rust/index-sys/src/: index_api.rs  lib.rs
rust/index/src/: indexing.rs  internal.rs  lib.rs  main.rs  model.rs  offset.rs  source_location.rs  test_utils.rs  timer.rs  timers.rs
rust/index/src/db/: load_document.sql  schema.sql
rust/index/src/indexing/: errors.rs  indexed_data.rs  ruby_indexer.rs
rust/index/src/model/: db.rs  declaration.rs  definitions.rs  dependency_map.rs  document.rs  graph.rs  id.rs  identity_maps.rs  ids.rs  index.rs  integrity.rs  local_index.rs  references.rs
rust/index/src/pools/: string_pool.rs  uri_pool.rs
rust/index/src/visualization/: dot.rs
rust/index/tests/: cli.rs
rust/rubydex/: Cargo.toml  README.md
rust/rubydex-mcp/: Cargo.toml  README.md
rust/rubydex-mcp/src/: main.rs  queries.rs  server.rs  tools.rs
rust/rubydex-mcp/tests/: mcp.rs
rust/rubydex-sys/: Cargo.toml  README.md  build.rs  cbindgen.toml
rust/rubydex-sys/src/: cypher_api.rs  declaration_api.rs  definition_api.rs  diagnostic_api.rs  document_api.rs  graph_api.rs  index_result_api.rs  lib.rs  location_api.rs  name_api.rs  reference_api.rs  signature_api.rs  utils.rs
rust/rubydex/benches/: graph_memory.rs  incremental_resolution.rs
rust/rubydex/examples/: diff.rs  incremental_verify.rs
rust/rubydex/src/: compile_assertions.rs  config.rs  diagnostic.rs  diff.rs  dot.rs  indexing.rs  integrity.rs  job_queue.rs  lib.rs  listing.rs  main.rs  model.rs  offset.rs  query.rs  resolution.rs  resolution_new.rs  resolution_tests.rs  stats.rs  visualization.rs
rust/rubydex/src/indexing/: local_graph.rs  rbs_indexer.rs  ruby_indexer.rs  ruby_indexer_tests.rs
rust/rubydex/src/model/: built_in.rs  change_set.rs  changeset.rs  declaration.rs  definitions.rs  document.rs  dsl.rs  dsl_event.rs  dsl_processors.rs  encoding.rs  graph.rs  graph_indexes.rs  id.rs  identity_maps.rs  ids.rs  integrity.rs  keywords.rs  name.rs  references.rs  shape.rs  snapshot.rs  sorted_vec_map.rs  string_ref.rs  visibility.rs
rust/rubydex/src/operation/: applier.rs  mod.rs  printer.rs  ruby_builder.rs
rust/rubydex/src/query/: cypher.rs
rust/rubydex/src/query/cypher/: ast.rs  error.rs  executor.rs  format.rs  lexer.rs  mod.rs  parser.rs  schema.rs  schema_info.rs  tests.rs  value.rs
rust/rubydex/src/stats/: orphan_report.rs  timer.rs
rust/rubydex/src/test_utils/: context.rs  graph_test.rs  local_graph_test.rs
rust/rubydex/src/visualization/: dot.rs
rust/rubydex/tests/: cli.rs
rust/saturn/: Cargo.toml
rust/saturn-sys/: Cargo.toml
rust/saturn-sys/src/: declaration_api.rs  definition_api.rs  diagnostic_api.rs  document_api.rs  graph_api.rs  lib.rs  location_api.rs  reference_api.rs  saturn_api.rs  unresolved_reference_api.rs  utils.rs
rust/saturn/src/: diagnostic.rs  errors.rs  indexing.rs  job_queue.rs  lib.rs  listing.rs  location.rs  main.rs  model.rs  offset.rs  position.rs  resolution.rs  resolve.rs  source_location.rs  stats.rs  test_utils.rs  timer.rs  visualization.rs
rust/saturn/src/db/: load_document.sql  schema.sql
rust/saturn/src/indexing/: errors.rs  local_graph.rs  nesting_stack.rs  ruby_indexer.rs  scope.rs
rust/saturn/src/model/: comment.rs  db.rs  declaration.rs  definitions.rs  document.rs  graph.rs  id.rs  identity_maps.rs  ids.rs  integrity.rs  name.rs  references.rs  serializable.rs
rust/saturn/src/stats/: memory.rs  timer.rs
rust/saturn/src/test_utils/: context.rs  graph_test.rs  local_graph_test.rs
rust/saturn/src/visualization/: dot.rs  renderer.rs
rust/saturn/tests/: cli.rs
src/: c_interface.rs  comments.rs  declaration.rs  file.rs  global_tables.rs  indexing.rs  internal.rs  lib.rs  location.rs  locations.rs  main.rs  model.rs  offset.rs  pool.rs  repository.rs  ruby_indexer.rs  serde.rs  string_pool.rs  tables.rs
test/: batched_callbacks_test.rb  console_test.rb  declaration_test.rb  definition_test.rb  document_test.rb  graph_test.rb  index_test.rb  location_test.rb  mcp_executable_build_test.rb  mcp_server_bridge_test.rb  mcp_server_executable_test.rb  mcp_server_test.rb  mcp_server_tools_test.rb  prototype_plugins_test.rb  references_test.rb  test_helper.rb
utils/: bench  bench-graph-memory  bench-incremental-resolution  compare.sh  compare_locations.sh  generate-corpus  mem-use  memory_check.sh  symbol-metrics
(+124 files in other folders)
