[package]
name = "index"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.29"
prost-build = "0.12"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
string-interner = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.8"
rmp-serde = "1.1"
bincode = "1.3"
postcard = { version = "1.0", features = ["use-std"] }
ciborium = "0.2"
prost = "0.12"
prost-types = "0.12"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[[bin]]
name = "insertion_benchmark"
path = "bin/insertion_benchmark.rs"

[[bin]]
name = "reading_benchmark"
path = "bin/reading_benchmark.rs"

[[bin]]
name = "storage_benchmark"
path = "bin/storage_benchmark.rs"

[workspace.lints.clippy]
# See: https://doc.rust-lang.org/clippy/lints.html
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
complexity = "forbid"
style = "forbid"
pedantic = "warn"

ptr-as-ptr = { level = "forbid", priority = 1 }
manual-let-else = { level = "allow", priority = 1 }

[lints]
workspace = true
