[workspace]
members = [
  "index",
  "index-sys",
]

[[bin]]
name = "index"
path = "src/main.rs"

[[bin]]
name = "sqlite"
path = "bin/sqlite.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
string-interner = "0.19.0"
ruby-prism = "1.4.0"
glob = "0.3.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
cbindgen = "0.29"
resolver = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.lints.clippy]
# See: https://doc.rust-lang.org/clippy/lints.html
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
complexity = "forbid"
style = "forbid"
pedantic = "warn"

ptr-as-ptr = { level = "forbid", priority = 1 }
manual-let-else = { level = "allow", priority = 1 }
