[workspace]
members = [
  "index",
  "index-sys",
]

resolver = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.lints.clippy]
# See: https://doc.rust-lang.org/clippy/lints.html
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
complexity = "forbid"
style = "forbid"
pedantic = "warn"

ptr-as-ptr = { level = "forbid", priority = 1 }
