[package]
name = "index"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "index"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
string-interner = "0.19.0"
ruby-prism = { git = "https://github.com/ruby/prism", branch = "main", path = "rust/ruby-prism" }
glob = "0.3.1"

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
