[package]
name = "index"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "index_cli"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
ruby-prism = "1.4.0"
url = "2.5.4"
rayon = "1.10.0"
blake3 = "1.8.2"

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
