[package]
name = "index"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[[bin]]
name = "index_cli"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
ruby-prism = "1.4.0"
url = "2.5.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rayon = "1.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
