[package]
name = "saturn"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[[bin]]
name = "saturn_cli"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
ruby-prism = "1.4.0"
url = "2.5.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
clap = { version = "4.5.16", features = ["derive"] }
glob = "0.3.2"
bytecount = "0.6.9"
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.1"
regex = "1.10"

[lints]
workspace = true
